Changelog for UCDPloneSkin

UCDPloneSkin 2.0 in progress - Released - Mar, 02 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Added confliglet option for logo to the left of department name
      in the header.
    - Fixed "Search UC Davis" text wrapping with a bad table width hack
      Should be redone with CSS
    - Vertically aligned form fields in the configlet

UCDPloneSkin 2.0 in progress - Released - Mar, 01 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Added bool configlet option for turning on/off privacy statement link
      It is off by default.  Deleting the "link to privacy statement" would
      provide equal functionality, but the bool allows us to set the link value
      while having this option turned off by default (since it isn't part of
      the original template.

UCDPloneSkin 2.0 in progress - Released - Feb, 22 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - finished configlet option for header bg image
      - added condition in ploneCustom.css.dtml to avoid 404s if user disables
        image
      - added option for disable image tiling

UCDPloneSkin 2.0 in progress - Released - Feb, 20 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - added configlet option for header background image

UCDPloneSkin 2.0 in progress - Released - Feb, 19 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - updated docs for clearing left slot after PloneCASLogin install
    - link to contact-info in footer is now absolute using $portal_url
    - removed atct_topic_view.pt
      - originally removed "contained smart folders" text from template
        users can customize this template on their own if needed
    - fixed skip to navigation link
    - fixed accesskeys
    - re-enabled accessibility-info link w/ configlet option for hiding it
    - added option for livesearch
      - hide accesskey details on accessibility-info page if not in use
    - configlet option for copyright string